; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_group.c_handle_status.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_group.c_handle_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GROUPCHAT_CLOSE_ONLINE = common dso_local global i32 0, align 4
@GROUPCHAT_CLOSE_CONNECTION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i64)* @handle_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_status(i8* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to i32*
  store i32* %9, i32** %7, align 8
  %10 = load i64, i64* %6, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %3
  %13 = load i32*, i32** %7, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @GROUPCHAT_CLOSE_ONLINE, align 4
  %16 = call i32 @set_conns_status_groups(i32* %13, i32 %14, i32 %15)
  br label %22

17:                                               ; preds = %3
  %18 = load i32*, i32** %7, align 8
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @GROUPCHAT_CLOSE_CONNECTION, align 4
  %21 = call i32 @set_conns_status_groups(i32* %18, i32 %19, i32 %20)
  br label %22

22:                                               ; preds = %17, %12
  ret i32 0
}

declare dso_local i32 @set_conns_status_groups(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
